--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ if you have any questions, you may contact us at <i><strong>h.asghari [at] tudel
     </main>
 
     <footer class="container">
-    <p><small>Copyright 2017-2019 Delft University of Technology</small></p>
-    <p><small><a href="https://github.com/DataRights/MAPPED"><img src="github.png" width="70" border="0"></a></small><br/>&nbsp;<br/>&nbsp;<br/></p>
+    <p><small>Copyright 2017-2020 Delft University of Technology</small></p>
+    <p><small><a href="https://github.com/datarights"><img src="github.png" width="70" border="0"></a></small><br/>&nbsp;<br/>&nbsp;<br/></p>
     
      
     </footer>
